TEST_PROGRAMS/INVALID/05/distributed_type_same_line_no_comma.go
package main

// Error: Two alias on one line, not seperated by comma
type (
  r1 rune r2 rune
)

func main() {

}
